--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prop-types": "^15.5.10",
     "rc-banner-anim": "^0.5.13",
     "react": "^15.6.1",
+    "react-canvas": "^1.3.0",
     "react-dev-utils": "^3.0.2",
     "react-dom": "^15.6.1",
     "react-draft-wysiwyg": "^1.10.0",
